--- a/index.html
+++ b/index.html
@@ -82,5 +82,8 @@
 				<button id="ok">OK</button>
 			</p>
 		</form>
+
+		<hr />
+		<address>Fireworks - <a href="https://github.com/jkoop/fireworks">GitHub</a></address>
 	</body>
 </html>
