--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 
 		<title>Fireworks</title>
 
-		<link rel="icon" type="image/x-icon" href="res/favicon-light.ico" class="libdarkness-light" sizes="16x16" />
-		<link rel="icon" type="image/svg+xml" href="res/favicon-light.svg" class="libdarkness-light" sizes="16x16 32x32 64x64 128x128 256x256 512x512 1024x1024 2048x2048" />
-		<link rel="icon" type="image/x-icon" href="res/favicon-dark.ico" class="libdarkness-dark"  sizes="16x16" />
-		<link rel="icon" type="image/svg+xml" href="res/favicon-dark.svg" class="libdarkness-dark"  sizes="16x16 32x32 64x64 128x128 256x256 512x512 1024x1024 2048x2048" />
-		<link rel="stylesheet" href="https://static.joekoop.com/main.css" />
+		<link rel="icon" type="image/svg+xml" href="res/favicon.svg" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
 		<link rel="stylesheet" href="res/style.css" />
 
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
