forgot to commit on this computer

--- a/html.html
+++ b/html.html
@@ -47,6 +47,15 @@
                     message: document.querySelector('input[name="message"]').value
                 }
             })
+        }).then(function(response) {
+            if(response.ok){
+                return response.text();
+            }
+            throw new Error('Something went wrong.');
+        }).then(function(text) {
+            console.log('Request successful', text);
+        }).catch(function(error) {
+            console.log('Request failed', error);
         });
     }
 </script>
