--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
 		<label for="colours">Colours:</label>
 		<select id="colours" id="colours" multiple>
-			<option value="f00" selected> Red</option>
-			<option value="f80"> Orange</option>
-			<option value="ff0" selected> Yellow</option>
-			<option value="0f0" selected> Green</option>
-			<option value="0ff"> Cyan</option>
-			<option value="00f" selected> Blue</option>
-			<option value="f0f"> Magenta</option>
-			<option value="fff" selected> White</option>
-			<option value="AAA"> Lt Grey</option>
-			<option value="666"> Dk Grey</option>
-			<option value="000"> Black</option>
-			<option value="fff">&#x2660; Spade</option>
-			<option value="fff">&#x2665; Heart</option>
-			<option value="fff">&#x2663; Club</option>
-			<option value="fff">&#x2666; Diamond</option>
+			<option value="f00" selected>Red</option>
+			<option value="f80">Orange</option>
+			<option value="ff0" selected>Yellow</option>
+			<option value="0f0" selected>Green</option>
+			<option value="0ff">Cyan</option>
+			<option value="00f" selected>Blue</option>
+			<option value="f0f">Magenta</option>
+			<option value="fff" selected>White</option>
+			<option value="aaa">Lt Grey</option>
+			<option value="666">Dk Grey</option>
+			<option value="000">Black</option>
+			<option value="spade">&#x2660; Spade</option>
+			<option value="heart">&#x2665; Heart</option>
+			<option value="club">&#x2663; Club</option>
+			<option value="diamond">&#x2666; Diamond</option>
 		</select>
 
 		<label for="highestNumber">Highest number:</label>
@@ -77,6 +77,7 @@
 			</p>
 			<p>
 				<button id="ok">OK</button>
+                <button id="reset" style="float:right">Reset</button>
 			</p>
 		</form>
 
