--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</p>
 			<p>
 				<label for="cardNumber">Number:</label>
-				<input id="cardNumber" type="number" value="1" min="1" max="5" step="1"/>
+				<select id="cardNumber"></select>
 				<label for="cardColour">Colour:</label>
 				<select id="cardColour"></select>
 			</p>
