--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
 			<p>
 				<input type="checkbox" id="isOnly" value="only" checked>
-				<label for="isOnly"><span>The only card that is</span><span>The only cards that are</span></label>
+				<label for="isOnly"><span>The only card that is</span><span>The only cards that are</span></label><br>
+				<input type="checkbox" id="not" value="not">
+				<label for="not">Not</label>
 			</p>
 			<p>
 				<input type="radio" id="isColour" name="cardIs" value="colour">
