--- a/index.html
+++ b/index.html
@@ -12,39 +12,45 @@
 		<link rel="stylesheet" href="res/style.css" />
 
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/jkoop/libdarkness@1.0/main.min.js" type="module"></script>
 		<script src="res/script.js"></script>
 	</head>
 	<body>
 		<h1 id="title">
 			Fireworks
 		</h1>
+
 		<hr />
 
-		<label for="numberOfCards">Number of cards:</label>
-		<input id="numberOfCards" type="number" value="5" min="1" max="15" step="1" />
+		<label>
+            Number of cards:
+            <input id="numberOfCards" type="number" value="5" min="1" max="15" step="1" />
+        </label>
 
-		<label for="colours">Colours:</label>
-		<select id="colours" id="colours" multiple>
-			<option value="f00" selected>Red</option>
-			<option value="f80">Orange</option>
-			<option value="ff0" selected>Yellow</option>
-			<option value="0f0" selected>Green</option>
-			<option value="0ff">Cyan</option>
-			<option value="00f" selected>Blue</option>
-			<option value="f0f">Magenta</option>
-			<option value="fff" selected>White</option>
-			<option value="aaa">Lt Grey</option>
-			<option value="666">Dk Grey</option>
-			<option value="000">Black</option>
-			<option value="spade">&#x2660; Spade</option>
-			<option value="heart">&#x2665; Heart</option>
-			<option value="club">&#x2663; Club</option>
-			<option value="diamond">&#x2666; Diamond</option>
-		</select>
+		<label>
+            Colours:
+            <select id="colours" id="colours" multiple>
+                <option value="f00" selected>Red</option>
+                <option value="f80">Orange</option>
+                <option value="ff0" selected>Yellow</option>
+                <option value="0f0" selected>Green</option>
+                <option value="0ff">Cyan</option>
+                <option value="00f" selected>Blue</option>
+                <option value="f0f">Magenta</option>
+                <option value="fff" selected>White</option>
+                <option value="aaa">Lt Grey</option>
+                <option value="666">Dk Grey</option>
+                <option value="000">Black</option>
+                <option value="spade">&#x2660; Spade</option>
+                <option value="heart">&#x2665; Heart</option>
+                <option value="club">&#x2663; Club</option>
+                <option value="diamond">&#x2666; Diamond</option>
+            </select>
+        </label>
 
-		<label for="highestNumber">Highest number:</label>
-		<input id="highestNumber" type="number" value="5" min="1" max="15" step="1" />
+		<label>
+            Highest number:
+            <input id="highestNumber" type="number" value="5" min="1" max="15" step="1" />
+        </label>
 
 		<hr>
 
@@ -55,27 +61,48 @@
 		</table>
 
 		<form onsubmit="return false" id="thisCardIs">
-			<h2><span>This card is:</span><span>These cards are:</span><span>None of my cards are:</span></h2>
+			<h2>
+                <span>This card is:</span>
+                <span>These cards are:</span>
+                <span>None of my cards are:</span>
+            </h2>
 
 			<p>
-				<input type="checkbox" id="isOnly" value="only" checked>
-				<label for="isOnly"><span>The only card that is</span><span>The only cards that are</span></label><br>
-				<input type="checkbox" id="not" value="not">
-				<label for="not">Not</label>
+                <span class="isOnly">
+                    <label>
+                        <input type="checkbox" id="isOnly" value="only" checked />
+                        <span>The only card that is</span>
+                        <span>The only cards that are</span>
+                    </label><br>
+                </span>
+				<label>
+                    <input type="checkbox" id="not" value="not" />
+                    Not
+                </label>
 			</p>
 			<p>
-				<input type="radio" id="isColour" name="cardIs" value="colour">
-				<label for="isColour">Colour</label><br>
-				<input type="radio" id="isNumber" name="cardIs" value="number" checked>
-				<label for="isNumber">Number</label><br>
-				<input type="radio" id="isReplaced" name="cardIs" value="replaced">
-				<label for="isReplaced">Replaced; now unknown</label>
+                <label>
+                    <input type="radio" id="isColour" name="cardIs" value="colour" />
+                    Colour
+                </label><br>
+				<label>
+                    <input type="radio" id="isNumber" name="cardIs" value="number" checked />
+                    Number
+                </label><br>
+				<label>
+                    <input type="radio" id="isReplaced" name="cardIs" value="replaced" />
+                    Replaced; now unknown
+                </label>
 			</p>
 			<p>
-				<label for="cardNumber">Number:</label>
-				<select id="cardNumber"></select>
-				<label for="cardColour">Colour:</label>
-				<select id="cardColour"></select>
+				<label>
+                    Number:
+                    <select id="cardNumber"></select>
+                </label>
+				<label>
+                    Colour:
+                    <select id="cardColour"></select>
+                </label>
 			</p>
 			<p>
 				<button id="ok">OK</button>
