"Add new card to hand" button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="play">
-            <button id="addCardToHand">Add card to hand</button>
+            <button id="addCardToHand">Add card</button>
         </div>
 
 		<hr />
