moving to another computer

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                 </label>
 			</p>
 			<p>
+                <label>
+                    <input type="radio" id="couldBe" name="couldBe" value="couldBe" />
+                    Can be (among other things)
+                </label><br>
+				<label>
+                    <input type="radio" id="couldBeOnly" name="couldBe" value="couldBeOnly" checked />
+                    Can only be
+                </label>
+			</p>
+			<p>
                 <label class="colour">
                     <input type="radio" id="isColour" name="cardIs" value="colour" />
                     Colour
